tests/NormalTests/paczka1/fuzzy1/59731063.err
Error in line 2: NxNNBtkP S84 37,4
Error in line 20: A8at9fBDAN S84 13,4
Error in line 21: Tt7j S846 47,5
